--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,30 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+# # Compiled source #
+# ###################
+# *.com
+# *.class
+# *.dll
+# *.exe
+# *.o
+# *.so
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+# # Packages #
+# ############
+# # it's better to unpack these files and commit the raw source
+# # git has its own built in compression methods
+# *.7z
+# *.dmg
+# *.gz
+# *.iso
+# *.jar
+# *.rar
+# *.tar
+# *.zip
 
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
+# # Logs and databases #
+# ######################
+# *.log
+# *.sql
+# *.sqlite
 
 # OS generated files #
 ######################
@@ -35,3 +35,5 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+node_modules
